# easypipinstall

./: .gitignore  CHANGELOG.md  README.md  makefile  requirements.txt  setup.cfg
src/easyinstall/: __init__.py  install.py
src/easypipinstall/: install.py  version.py
