[metadata]
name = easyinstall
version = 0.1.0
author = Nicolas Dao
author_email = nicolas.dao@gmail.com
description = pip install Python packages with automatic requirements.txt and setup.cfg updates. Also easily uninstall all the dependencies.
long_description = file: README.md, LICENSE
keywords = pip, install
license = BSD-3-Clause
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License

[options]
packages = find:
package_dir = 
	=src
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
dev = 
	flake8
	black

[flake8]
extend-ignore = W191,E501,E302,E231,W291,E305,W391
exclude = .git,__pycache__,.venv,build,dist

