[metadata]
name = easyinstall
version = 0.1.2
author = Nicolas Dao
author_email = nicolas.dao@gmail.com
description = pip install Python packages with automatic requirements.txt, prod-requirements.txt and setup.cfg files update. Also easily uninstall all the dependencies from those files.
long_description = file: README.md, LICENSE
keywords = pip, install
license = BSD-3-Clause
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License

[options]
packages = find:
package_dir = 
	=src
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
dev = 
	flake8
	black

[options.entry_points]
console_scripts =
	easyi = easyinstall:install
	easyu = easyinstall:uninstall

[flake8]
extend-ignore = W191,E501,E302,E231,W291,E305,W391
exclude = .git,__pycache__,.venv,build,dist

